# ML-Assignment

./: .gitignore  main.py  pyproject.toml
src/: __init__.py
src/api/middleware/: timer.py
src/api/routes/: __init__.py  generator.py
