[tool.poetry]
name = "ml assignment for stablediffusionapi"
version = "0.1.0"
description = ""
authors = ["Ridwan <ridwanhaq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
